Added smaller size for small screens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator (React + JavaScript)</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=backspace" />
   </head>
-  <body class="flex h-screen justify-center items-center bg-[#b4ebff]">
+  <body class="flex h-screen w-screen justify-center items-center bg-[#b4ebff]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
